--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Color Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="./assets/style/style.css">
 </head>
 <body>
-    <h1>The Greatest <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>The Greatest
+        <br>
+        <span id="colorDisplay">RGB</span>
+        <br>
+        Color Game</h1>
+    
+    <div id="stripe">
+        <button id="reset">New Colors</button>
+        <span id="message"></span>
+        <button id="easyBtn">Easy</button>
+        <button id="hardBtn" class="selectedBtn">Hard</button>
+    </div>
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
